# rag-dsn

./: .gitignore  .nojekyll  Dockerfile  README.md  _quarto.yml  about.html  about.qmd  config.yaml  index.html  index.qmd  main.py  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: api.yaml
app/: Dockerfile  main.py
deployment/: deployment.yml  ingress.yml  service.yml
site_libs/bootstrap/: bootstrap-53c9e126b0091e9c775085d24c713b6d.min.css  bootstrap-dark-9c8ce105c34b7d5d3946ce6cf7e3faf2.min.css  bootstrap-dark-c974f741853f9569cd767c07baf10b76.min.css
src/: ingest.py  main.py  parse.py
themes/: dark.scss
