[project]
name = "rag-dsn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.4",
    "loguru>=0.7.3",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "pypdf2>=3.0.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.14.3",
    "uvicorn>=0.38.0",
]
